--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
             </button>
         </div>
     </div>
+    <div id="autoplay-cont">
+        <button id="back-btn">
+            <i class="fa-solid fa-arrow-left"></i>
+        </button>
+        <button id="stop-btn">
+            <i class="fa-solid fa-pause"></i>
+        </button>
+        <button id="play-btn">
+            <i class="fa-solid fa-arrow-right"></i>
+        </button>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
